examples/test/testpolicy13382.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13382
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key20: value0
      key44: value32
      key9: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value20
          key47: value18
          key37: value40
